# ejercicios-series-temporales

./: .gitignore  LICENSE  pyproject.toml
data/: houshold_consumption_rolled.csv
jp_notebooks/: 02_preprocessing_exercise.ipynb  05_forecasting_exercise.ipynb  optuna.db
