[project]
name = "ejercicios-series-temporales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "aeon>=1.3.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "optuna>=4.8.0",
    "pmdarima>=2.1.1",
    "requests>=2.33.0",
    "rich>=14.3.3",
    "statsmodels>=0.14.6",
]

